# etiketa

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/kotlin/com/github/adrijanrogan/etiketa/: Platform.android.kt
app/src/androidMain/res/values/: strings.xml
app/src/commonMain/kotlin/com/github/adrijanrogan/etiketa/: Platform.kt
app/src/commonMain/kotlin/com/github/adrijanrogan/etiketa/ui/: Theme.kt
app/src/iosMain/kotlin/com/github/adrijanrogan/etiketa/: MainViewController.kt  Platform.ios.kt
app/src/jvmMain/kotlin/com/github/adrijanrogan/etiketa/: Platform.jvm.kt  main.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/adrijanrogan/etiketa/main/: MainActivity.kt
app/src/main/java/com/github/adrijanrogan/etiketa/ui/: Button.kt  Theme.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
taglib-android/: README.md  build.gradle.kts
taglib-android/src/main/: AndroidManifest.xml
taglib-android/src/main/cpp/: CMakeLists.txt  taglib_jni.cpp
taglib-api/: build.gradle.kts
taglib-api/src/androidMain/kotlin/com/github/adrijanrogan/taglib/: Metadata.android.kt
taglib-api/src/commonMain/kotlin/com/github/adrijanrogan/taglib/: Metadata.kt
taglib-api/src/jvmMain/kotlin/com/github/adrijanrogan/taglib/: Metadata.jvm.kt
(+4 files in other folders)
